Almost full validation for inbound `message_id`s, perform unimplemented checks in DH handshake